--- a/provisioning/roles/apps/partner-codes/tasks/file-structure.yml
+++ b/provisioning/roles/apps/partner-codes/tasks/file-structure.yml
@@ -9,22 +9,23 @@
     mode: 0775
 
   with_items:
-    - "{{ partner_codes_backups_dir }}"
-    - "{{ partner_codes_private_dir }}"
-    - "{{ partner_codes_upload_dir }}"
-    - "{{ partner_codes_git_dir }}"
-    - "{{ partner_codes_log_dir }}"
-    - "{{ partner_codes_src_dir }}"
-    - "{{ partner_codes_src_dir }}/tools"
-    - "{{ partner_codes_tools_dir }}"
-    - "{{ partner_codes_venv_dir }}"
-    - "{{ partner_codes_tls_path }}"
-    - "{{ partner_codes_tmp_dir }}"
-    - "{{ partner_codes_runtime_dir }}"
-    - "{{ partner_codes_security_dir }}"
-    - "/var/log/gunicorn"
     - "/etc/nginx/sites-available"
     - "/etc/nginx/sites-enabled"
+    - "/var/log/gunicorn"
+    - "{{ partner_codes_backups_dir }}"
+    - "{{ partner_codes_git_dir }}"
+    - "{{ partner_codes_log_dir }}"
+    - "{{ partner_codes_private_dir }}"
+    - "{{ partner_codes_private_dir }}/docker/registry"
+    - "{{ partner_codes_runtime_dir }}"
+    - "{{ partner_codes_security_dir }}"
+    - "{{ partner_codes_src_dir }}"
+    - "{{ partner_codes_src_dir }}/tools"
+    - "{{ partner_codes_tls_path }}"
+    - "{{ partner_codes_tmp_dir }}"
+    - "{{ partner_codes_tools_dir }}"
+    - "{{ partner_codes_upload_dir }}"
+    - "{{ partner_codes_venv_dir }}"
 
 
 - name: ensure folders owned by "www-data"
