--- a/provisioning/roles/apps/partner-codes/tasks/nginx.yml
+++ b/provisioning/roles/apps/partner-codes/tasks/nginx.yml
@@ -67,6 +67,17 @@
     group: "www-data"
   notify: restart nginx
 
+
+- name: install nginx docker registry nginx config
+  template:
+    src: "nginx/docker.partner-codes.conf.j2"
+    dest: "/etc/nginx/sites-available/docker.partner-codes.conf"
+    owner: root
+    group: root
+    mode: 644
+  notify: restart nginx
+  when: fullchain_cert.stat.exists == True
+
 - name: install nginx subdomains config file
   template:
     src: "nginx/subdomain.partner-codes.conf.j2"
@@ -77,7 +88,6 @@
   notify: restart nginx
   when: fullchain_cert.stat.exists == True
   with_items:
-    - docker
     - git
     - ipfs
     - mail
